# Risk-Flag-Prediction

./: Dockerfile  Pipfile  README.md  dvc.yaml  filt.txt  mlflow_run_info.json  params.yaml  requirements.txt  rerquirement.txt  tree_output.txt
.github/workflow/: cicd.yaml
.github/workflows/: cicd.yaml
Risk flag prediction/: Makefile  Pipfile  README.md  pyproject.toml
Risk flag prediction/docs/: mkdocs.yml
Risk flag prediction/docs/docs/: index.md
Risk flag prediction/risk_flag_prediction/: dataset.py  plots.py
Risk flag prediction/risk_flag_prediction/modeling/: predict.py
artifacts/: city_global_mean.joblib  city_mapping.joblib  state_mapping.joblib
data/raw/: test.csv
flask_api/: main.py
flask_api/templates/: index.html
metrics/: .gitignore
models/: .gitignore
notebooks/: Risk_Flag_Class_Imbalance.ipynb  Risk_flag_Preprocessing&EDA.ipynb  Test_data_preprocessed.csv
plots/: .gitignore
risk_flag_prediction/modeling/: train.py
src/: __init__.py  features.py
src/data/: data_ingestion.py  data_preprocessing.py
src/modeling/: model_building.py  model_evaluation.py  model_prediction.py  model_register.py
