[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "risk_flag_prediction"
version = "0.0.1"
description = "Description"
authors = [
  { name = "Ethel Phiri" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.9.13"


[tool.ruff]
line-length = 99
src = ["risk_flag_prediction"]
include = ["pyproject.toml", "risk_flag_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["risk_flag_prediction"]
force-sort-within-sections = true

